@@ -1,3 +1,13 @@
+2009-03-19  Gustavo Noronha Silva  <gns@gnome.org>
+
+        Reviewed by Mark Rowe.
+
+        Make determinePassedArchitecture always consume the --32-bit
+        option, also in non-AppleMacWebkit platforms. Solution pointed out
+        by Mark Rowe.
+
+        * Scripts/webkitdirs.pm:
+
 2009-03-19  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Oliver Hunt.
